--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </main>
     <ul>
     <li><a href="link">Name</a>
-    <li><a href="/A3/JJensen3.html">JaydenJensenA3</a></li>
-    <li><a href="/A3/TLe3.html">TrealLeeA3</a>
+    <li><a href="index/A3/JJensen3.html">JaydenJensenA3</a></li>
+    <li><a href="index/A3/TLe3.html">TrealLeeA3</a>
     </ul>
   </body>
 </html>
