--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       <h2>Student Samples</h2>
     </main>
     <ul>
+    <li>updated</li>
     <li><a href="link">Name</a>
-    <li><a href="index/A3/JJensen3.html">JaydenJensenA3</a></li>
-    <li><a href="index/A3/TLe3.html">TrealLeeA3</a>
+    <li><a href="StudentSamples/A3/JJensen3.html">JaydenJensenA3</a></li>
+    <li><a href="StudentSamples/A3/TLe3.html">TrealLeeA3</a>
     </ul>
   </body>
 </html>
