--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <ul>
     <li>updated</li>
     <li><a href="link">Name</a>
-    <li><a href="StudentSamples/A3/JJensen3.html">JaydenJensenA3</a></li>
-    <li><a href="StudentSamples/A3/TLe3.html">TrealLeeA3</a>
+    <li><a href="/A3/JJensen3.html">JaydenJensenA3</a></li>
+    <li><a href="/A3/TLe3.html">TrealLeeA3</a>
     </ul>
   </body>
 </html>
