--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h2>Student Samples</h2>
     </main>
     <ul>
-    <li>updated</li>
+    <li>updated2</li>
     <li><a href="link">Name</a>
     <li><a href="/A3/JJensen3.html">JaydenJensenA3</a></li>
     <li><a href="/A3/TLe3.html">TrealLeeA3</a>
