--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <main>
       <h2>Student Samples</h2>
     </main>
-    <ul>
-    <li>updated3</li>
-    <li><a href="link">Name</a>
+    <ol>
+    <h3>Assignment 3</h3>
+    <li><a href="/StudentSamples/A1/RRoszell1.html">First:</a>
     <li><a href="/StudentSamples/A3/JJensen3.html">JaydenJensenA3</a></li>
-    <li><a href="/A3/TLe3.html">TrealLeeA3</a>
-    </ul>
+    <li><a href="/StudentSamples/A3/TLe3.html">JaydenJensenA3</a></li>
+    </ol>
   </body>
 </html>
