--- a/A01/First.html
+++ b/A01/First.html
@@ -10,6 +10,6 @@
   <body>
     <main>
     </main>
-    <script src="RRoszell1.js"></script>
+    <script src="First.js"></script>
   </body>
 </html>
