--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h2>Student Samples</h2>
     </main>
     <ol>
-    <h3>Assignment 3</h3>
+    <h3>Assignment #1: Paint Picture</h3>
     <li><a href="/StudentSamples/A01/First.html">First:</a>
     </ol>
   </body>
