--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </main>
     <ol>
     <h3>Assignment #1: Paint Picture</h3>
-    <li><a href="/StudentSamples/A16/02.html">Natalia</a>
+    <li><a href="/StudentSamples/Year1/A16/02.html">Natalia</a>
     <li><a href="/StudentSamples/A01/02.html">Elise</a>
     </ol>
   </body>
