--- a/index.html
+++ b/index.html
@@ -9,10 +9,389 @@
     <main>
       <h2>Student Samples</h2>
     </main>
-    <ol>
+    <h2>Year 1</h2>
     <h3>Assignment #1: Paint Picture</h3>
-    <li><a href="/StudentSamples/Year1/A16/02.html">Natalia</a>
-    <li><a href="/StudentSamples/A01/02.html">Elise</a>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A01/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/02.html">Neon Sunset</a>
+    <li><a href="/StudentSamples/Year1/A01/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #2: Width and Height</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A02/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A02/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A02/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A02/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A02/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A02/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #3: Variables</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A03/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #4: Conditionals</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A04/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #5: Bouncing Ball</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A05/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #6: Whiteboard</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A06/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #7: Growing Circles</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A07/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #8: Simple Game</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A08/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #10: For Loops</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A09/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #9: While Loops</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A10/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #11: Arrays</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A11/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #12: Snow</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A12/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #13: Madlib Generator</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A13/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A13/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A13/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A13/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A13/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A13/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #14: Animated Triangles</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A14/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #15: The Cell</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A15/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #16: Image Filters</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A16/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A16/02.html">Mushroom</a>
+    <li><a href="/StudentSamples/Year1/A16/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A16/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A16/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A16/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #17: get()</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A17/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #18: Pixel Manipulation</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A18/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #19: Audio Visulizer</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A19/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #20: Audio Pixelizer</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A20/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #21: Blockade Game</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year1/A21/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/HM01.html"> </a>
+    </ol>
+
+
+    <!------------------------------------------- YEAR 2---------------------------------->
+
+    <h2>Year 2</h2>
+    <h3>Assignment #1: Paint Picture</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A01/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A01/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A01/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A01/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A01/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A01/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #2: Width and Height</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A02/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #3: Variables</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A03/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #4: Conditionals</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A04/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #5: Bouncing Ball</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A05/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A05/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A05/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A05/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A05/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A05/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #6: Whiteboard</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A06/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A06/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A06/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A06/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A06/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A06/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #7: Growing Circles</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A07/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A07/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A07/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A07/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A07/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A07/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #8: Simple Game</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A08/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #10: For Loops</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A09/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #9: While Loops</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A10/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A10/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A10/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A10/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A10/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A10/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #11: Arrays</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A11/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A11/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A11/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A11/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A11/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A11/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #12: Snow</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A12/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A12/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A12/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A12/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A12/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A12/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #13: Madlib Generator</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A13/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #14: Animated Triangles</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A14/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #15: The Cell</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A15/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #16: Image Filters</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A16/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A16/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A16/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A16/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A16/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A16/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #17: get()</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A17/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #18: Pixel Manipulation</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A18/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A18/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A18/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A18/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A18/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A18/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #19: Audio Visulizer</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A19/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A19/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A19/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A19/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A19/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A19/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #20: Audio Pixelizer</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A20/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A20/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A20/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A20/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A20/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A20/HM01.html"> </a>
+    </ol>
+    <h3>Assignment #21: Blockade Game</h3>
+    <ol>
+    <li><a href="/StudentSamples/Year2/A21/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A21/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A21/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A21/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A21/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A21/HM01.html"> </a>
     </ol>
   </body>
 </html>
