Updated Year 2 Coding

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <main>
       <h2>Student Samples</h2>
     </main>
+
+    <!------------------------------------------- YEAR 1---------------------------------->
+
     <h2>Year 1</h2>
     <h3>Assignment #1: Paint Picture</h3>
     <ol>
@@ -82,7 +85,7 @@
     <li><a href="/StudentSamples/Year1/A08/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/HM01.html"> </a>
     </ol>
-    <h3>Assignment #10: For Loops</h3>
+    <h3>Assignment #9: For Loops</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A09/01.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/02.html"> </a>
@@ -91,7 +94,7 @@
     <li><a href="/StudentSamples/Year1/A09/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/HM01.html"> </a>
     </ol>
-    <h3>Assignment #9: While Loops</h3>
+    <h3>Assignment #10: While Loops</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A10/01.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/02.html"> </a>
@@ -204,7 +207,7 @@
     <!------------------------------------------- YEAR 2---------------------------------->
 
     <h2>Year 2</h2>
-    <h3>Assignment #1: Paint Picture</h3>
+    <h3>Assignment #1: Bouncing Ball</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A01/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A01/02.html"> </a>
@@ -213,7 +216,7 @@
     <li><a href="/StudentSamples/Year2/A01/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A01/HM01.html"> </a>
     </ol>
-    <h3>Assignment #2: Width and Height</h3>
+    <h3>Assignment #2: Quantum Foam</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A02/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/02.html"> </a>
@@ -222,7 +225,7 @@
     <li><a href="/StudentSamples/Year2/A02/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/HM01.html"> </a>
     </ol>
-    <h3>Assignment #3: Variables</h3>
+    <h3>Assignment #3: Noisey Fireflies</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A03/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/02.html"> </a>
@@ -231,7 +234,7 @@
     <li><a href="/StudentSamples/Year2/A03/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/HM01.html"> </a>
     </ol>
-    <h3>Assignment #4: Conditionals</h3>
+    <h3>Assignment #4: Laser Engraver</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A04/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/02.html"> </a>
@@ -240,7 +243,7 @@
     <li><a href="/StudentSamples/Year2/A04/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/HM01.html"> </a>
     </ol>
-    <h3>Assignment #5: Bouncing Ball</h3>
+    <h3>Assignment #5: Speed Simon</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A05/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A05/02.html"> </a>
@@ -249,7 +252,7 @@
     <li><a href="/StudentSamples/Year2/A05/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A05/HM01.html"> </a>
     </ol>
-    <h3>Assignment #6: Whiteboard</h3>
+    <h3>Assignment #6: Generated Forest</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A06/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/02.html"> </a>
@@ -258,7 +261,7 @@
     <li><a href="/StudentSamples/Year2/A06/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/HM01.html"> </a>
     </ol>
-    <h3>Assignment #7: Growing Circles</h3>
+    <h3>Assignment #7: Emoji Creator</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A07/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A07/02.html"> </a>
@@ -267,7 +270,7 @@
     <li><a href="/StudentSamples/Year2/A07/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A07/HM01.html"> </a>
     </ol>
-    <h3>Assignment #8: Simple Game</h3>
+    <h3>Assignment #8: Paint Splatter</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A08/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/02.html"> </a>
@@ -276,7 +279,7 @@
     <li><a href="/StudentSamples/Year2/A08/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/HM01.html"> </a>
     </ol>
-    <h3>Assignment #10: For Loops</h3>
+    <h3>Assignment #9: Rocket</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A09/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/02.html"> </a>
@@ -285,7 +288,7 @@
     <li><a href="/StudentSamples/Year2/A09/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/HM01.html"> </a>
     </ol>
-    <h3>Assignment #9: While Loops</h3>
+    <h3>Assignment #10: Create a City</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A10/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A10/02.html"> </a>
@@ -294,7 +297,7 @@
     <li><a href="/StudentSamples/Year2/A10/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A10/HM01.html"> </a>
     </ol>
-    <h3>Assignment #11: Arrays</h3>
+    <h3>Assignment #11: Particles</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A11/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A11/02.html"> </a>
@@ -303,7 +306,7 @@
     <li><a href="/StudentSamples/Year2/A11/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A11/HM01.html"> </a>
     </ol>
-    <h3>Assignment #12: Snow</h3>
+    <h3>Assignment #12: Evolution Game</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A12/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A12/02.html"> </a>
@@ -312,7 +315,7 @@
     <li><a href="/StudentSamples/Year2/A12/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A12/HM01.html"> </a>
     </ol>
-    <h3>Assignment #13: Madlib Generator</h3>
+    <h3>Assignment #13: Classes</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A13/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/02.html"> </a>
@@ -321,7 +324,7 @@
     <li><a href="/StudentSamples/Year2/A13/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/HM01.html"> </a>
     </ol>
-    <h3>Assignment #14: Animated Triangles</h3>
+    <h3>Assignment #14: Splitting Bubbles</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A14/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/02.html"> </a>
@@ -330,7 +333,7 @@
     <li><a href="/StudentSamples/Year2/A14/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/HM01.html"> </a>
     </ol>
-    <h3>Assignment #15: The Cell</h3>
+    <h3>Assignment #15: Pixel Art</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A15/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/02.html"> </a>
@@ -339,7 +342,7 @@
     <li><a href="/StudentSamples/Year2/A15/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/HM01.html"> </a>
     </ol>
-    <h3>Assignment #16: Image Filters</h3>
+    <h3>Assignment #16: Falling Sand</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A16/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/02.html"> </a>
@@ -348,7 +351,7 @@
     <li><a href="/StudentSamples/Year2/A16/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/HM01.html"> </a>
     </ol>
-    <h3>Assignment #17: get()</h3>
+    <h3>GAME 1: Dino Game</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A17/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/02.html"> </a>
@@ -357,7 +360,7 @@
     <li><a href="/StudentSamples/Year2/A17/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/HM01.html"> </a>
     </ol>
-    <h3>Assignment #18: Pixel Manipulation</h3>
+    <h3>GAME 2: Snake</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A18/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/02.html"> </a>
@@ -366,7 +369,7 @@
     <li><a href="/StudentSamples/Year2/A18/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/HM01.html"> </a>
     </ol>
-    <h3>Assignment #19: Audio Visulizer</h3>
+    <h3>GAME 3: War</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A19/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A19/02.html"> </a>
@@ -374,24 +377,6 @@
     <li><a href="/StudentSamples/Year2/A19/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A19/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A19/HM01.html"> </a>
-    </ol>
-    <h3>Assignment #20: Audio Pixelizer</h3>
-    <ol>
-    <li><a href="/StudentSamples/Year2/A20/01.html"> </a>
-    <li><a href="/StudentSamples/Year2/A20/02.html"> </a>
-    <li><a href="/StudentSamples/Year2/A20/03.html"> </a>
-    <li><a href="/StudentSamples/Year2/A20/04.html"> </a>
-    <li><a href="/StudentSamples/Year2/A20/05.html"> </a>
-    <li><a href="/StudentSamples/Year2/A20/HM01.html"> </a>
-    </ol>
-    <h3>Assignment #21: Blockade Game</h3>
-    <ol>
-    <li><a href="/StudentSamples/Year2/A21/01.html"> </a>
-    <li><a href="/StudentSamples/Year2/A21/02.html"> </a>
-    <li><a href="/StudentSamples/Year2/A21/03.html"> </a>
-    <li><a href="/StudentSamples/Year2/A21/04.html"> </a>
-    <li><a href="/StudentSamples/Year2/A21/05.html"> </a>
-    <li><a href="/StudentSamples/Year2/A21/HM01.html"> </a>
     </ol>
   </body>
 </html>
