Added Aodhans Assignments

--- a/Extra/01.html
+++ b/Extra/01.html
@@ -11,5 +11,14 @@
     <main>
     </main>
     <script src="01.js"></script>
+    <p>A,D to move vehicle
+      W,S to move bucket
+      Q,E to rotate bucket
+      R to acces shop
+      B to buy item
+      A,Ddd to navigate shop
+      
+      Goal:
+      Get all upgrades</p>
   </body>
 </html>
