--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A01/01.html"> </a>
     <li><a href="/StudentSamples/Year1/A01/02.html">Neon Sunset</a>
-    <li><a href="/StudentSamples/Year1/A01/03.html"> </a>
-    <li><a href="/StudentSamples/Year1/A01/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/03.html">Ripkin Roszell</a>
+    <li><a href="/StudentSamples/Year1/A01/04.html">Aodhan Bevans</a>
     <li><a href="/StudentSamples/Year1/A01/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A01/HM01.html"> </a>
     </ol>
@@ -69,7 +69,7 @@
     </ol>
     <h3>Assignment #7: Growing Circles</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A07/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/01.html">Aodhan Bevans</a>
     <li><a href="/StudentSamples/Year1/A07/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/04.html"> </a>
@@ -254,7 +254,7 @@
     </ol>
     <h3>Assignment #6: Generated Forest</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A06/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A06/01.html">Aodhan Bevans</a>
     <li><a href="/StudentSamples/Year2/A06/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/04.html"> </a>
@@ -351,24 +351,16 @@
     <li><a href="/StudentSamples/Year2/A16/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/HM01.html"> </a>
     </ol>
-<<<<<<< HEAD
     <h3>Game 1: Dino Game</h3>
-=======
-    <h3>GAME 1: Dino Game</h3>
->>>>>>> fdd77345b68c0850b49ff220e459b2998bb99093
     <ol>
-    <li><a href="/StudentSamples/Year2/A17/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/01.html">Aodhan Bevans</a>
     <li><a href="/StudentSamples/Year2/A17/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/HM01.html"> </a>
     </ol>
-<<<<<<< HEAD
     <h3>Game 2: Snake</h3>
-=======
-    <h3>GAME 2: Snake</h3>
->>>>>>> fdd77345b68c0850b49ff220e459b2998bb99093
     <ol>
     <li><a href="/StudentSamples/Year2/A18/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/02.html"> </a>
@@ -377,11 +369,7 @@
     <li><a href="/StudentSamples/Year2/A18/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/HM01.html"> </a>
     </ol>
-<<<<<<< HEAD
     <h3>Game 3: War</h3>
-=======
-    <h3>GAME 3: War</h3>
->>>>>>> fdd77345b68c0850b49ff220e459b2998bb99093
     <ol>
     <li><a href="/StudentSamples/Year2/A19/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A19/02.html"> </a>
@@ -390,21 +378,18 @@
     <li><a href="/StudentSamples/Year2/A19/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A19/HM01.html"> </a>
     </ol>
-<<<<<<< HEAD
 
 <!-------------------------------------------EXTRA---------------------------------->
 
     <h2>Extra Projects</h2>
     <h3>Assignment #1: Paint Picture</h3>
     <ol>
-    <li><a href="/StudentSamples/Extra/A01/01.html"> </a>
+    <li><a href="/StudentSamples/Extra/A01/01.html">Aodhan Bevans</a>
     <li><a href="/StudentSamples/Extra/A01/02.html"> </a>
     <li><a href="/StudentSamples/Extra/A01/03.html"> </a>
     <li><a href="/StudentSamples/Extra/A01/04.html"> </a>
     <li><a href="/StudentSamples/Extra/A01/05.html"> </a>
     <li><a href="/StudentSamples/Extra/A01/06.html"> </a>
     </ol>
-=======
->>>>>>> fdd77345b68c0850b49ff220e459b2998bb99093
   </body>
 </html>
