--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </ol>
     <h3>Assignment #9: Rocket</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A09/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/01.html">Aodhan Bevans</a>
     <li><a href="/StudentSamples/Year2/A09/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/04.html"> </a>
@@ -382,7 +382,6 @@
 <!-------------------------------------------EXTRA---------------------------------->
 
     <h2>Extra Projects</h2>
-    <h3>Assignment #1: Paint Picture</h3>
     <ol>
     <li><a href="/StudentSamples/Extra/A01/01.html">Aodhan Bevans</a>
     <li><a href="/StudentSamples/Extra/A01/02.html"> </a>
