--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </ol>
     <h3>Assignment #2:Quantum Foam</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A02/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/01.html">Noah Harker</a>
     <li><a href="/StudentSamples/Year2/A02/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/04.html"> </a>
@@ -227,7 +227,7 @@
     </ol>
     <h3>Assignment #3: Noisey Fireflies</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A03/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/01.html">Noah Harker</a>
     <li><a href="/StudentSamples/Year2/A03/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/04.html"> </a>
@@ -317,7 +317,7 @@
     </ol>
     <h3>Assignment #13: Classes</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A13/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/01.html">Noah Harker</a>
     <li><a href="/StudentSamples/Year2/A13/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/04.html"> </a>
@@ -335,7 +335,7 @@
     </ol>
     <h3>Assignment #15: Pixel Art</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A15/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/01.html">Noah Harker</a>
     <li><a href="/StudentSamples/Year2/A15/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/04.html"> </a>
