--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </ol>
     <h3>Assignment #6: Whiteboard</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A06/01.html"> </a>
-    <li><a href="/StudentSamples/Year1/A06/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/01.html">Aodhan Bevans</a>
+    <li><a href="/StudentSamples/Year1/A06/02.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year1/A06/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A06/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A06/05.html"> </a>
@@ -70,7 +70,7 @@
     <h3>Assignment #7: Growing Circles</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A07/01.html">Aodhan Bevans</a>
-    <li><a href="/StudentSamples/Year1/A07/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/02.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year1/A07/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/05.html"> </a>
@@ -96,7 +96,7 @@
     </ol>
     <h3>Assignment #10: While Loops</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A10/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/01.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year1/A10/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
@@ -105,7 +105,7 @@
     </ol>
     <h3>Assignment #11: Arrays</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A11/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/01.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year1/A11/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A11/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A11/04.html"> </a>
@@ -141,7 +141,7 @@
     </ol>
     <h3>Assignment #15: The Cell</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A15/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/01.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year1/A15/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/04.html"> </a>
@@ -195,7 +195,7 @@
     </ol>
     <h3>Assignment #21: Blockade Game</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A21/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/01.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year1/A21/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A21/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A21/04.html"> </a>
@@ -273,7 +273,7 @@
     <h3>Assignment #8: Paint Splatter</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A08/01.html">Nathan Olsen</a>
-    <li><a href="/StudentSamples/Year2/A08/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/02.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year2/A08/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/05.html"> </a>
@@ -318,7 +318,7 @@
     <h3>Assignment #13: Classes</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A13/01.html">Noah Harker</a>
-    <li><a href="/StudentSamples/Year2/A13/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/02.html">Kieran Olsen</a>
     <li><a href="/StudentSamples/Year2/A13/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/05.html"> </a>
